I#199 - ESoupAuthBearer: Is not thread safe

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/199